--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 0;
 }
 body {
+    
     width: 100vw;
     height: 100vh;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -10,8 +11,20 @@ body {
     justify-content: center;
     align-items: center;
 }
-
-
+.mainMenu{
+    width: var(--mainMenuWidth);
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    --sideBarWith: 30%;
+    --mainMenuWidth: 70%;
+}
 .con {
     display: flex;
     justify-content: center;
@@ -70,4 +83,15 @@ body {
     font-weight: 800;
     font-size: 1.5rem;
     color: white;
+}
+
+.sideBar {
+    display: flex;
+    width: var(--sideBarWith);
+    height: 100%;
+    border: solid 2px;
+    border-color: hsla(353, 81%, 51%, 1);
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 }
